changed experiment shell script